--- a/.gitignore
+++ b/.gitignore
@@ -266,6 +266,8 @@ _PageStart.cshtml
 [Ll]atest/
 [Pp]lugins/
 [Ss]cripts/
+[Ll]ayouts/snation/
+[Aa]nalytics/
 [Tt]emplates/[Jj][Mm][Ll]-[Pp]hoto-[Ss]ervices/*
 google28de3fd4c250a317.html
 
